# bevy-learning

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
js/: bevy-demo.js  bevy_demo.wasm  index.js
public/: event.js  index.html
src/: bridge.rs  lib.rs  main.rs
src/bridge/: buffer_meta.rs  global_buffer.rs  js_global_storage.rs  message.rs  mod.rs  model.rs  serialize.rs
src/examples/: ecs.rs
src/js/: globalStorage.js  message.js
web/: bevyApp.js  event.js  index.js
