[package]
name = "bevy-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "s"

[profile.dev]
# Tell `rustc` to optimize for small code size.
debug = true
lto = "fat"
opt-level = "s"
