[package]
name = "bevy-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
js-sys = "0.3.64"
once_cell = "1.18.0"
serde = "1.0.188"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = {version = "0.2.87"}
web-sys = "0.3.64"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.wasm-release]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
